# vidsearch

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/vidsearch/: __init__.py  cli.py
src/vidsearch/core/: db.py  indexer.py  search.py  transcribe.py
